--- a/samples/structure-sample-01/EPUB/xhtml/links.xhtml
+++ b/samples/structure-sample-01/EPUB/xhtml/links.xhtml
@@ -63,14 +63,14 @@
 						with non-English-speaking backgrounds represents the fastest growing group of this
 						population. In the last decade, the total student enrollment in public schools increased by
 						only 14 percent, while the number of English learners grew 70 percent and is projected to
-						grow even more <a epub:type="biblioref" href="bibliography02.xhtml#P70004858060007AC"
+						grow even more <a epub:type="biblioref" href="bibliography.xhtml#P70004858060007AC"
 							>(Abernathy, 2007)</a>. The 2000 U.S. Census identified 20 percent of school-age children
 						as non-native English speakers).</p>
 					<p>The National League for Nursing (NLN) recognized that if nurses are to become effective
 						users of the electronic health records, nurses need to be educated. The NLN called for
 						reform to nursing education to promote quality education that prepares technologysavvy
 						nurses who can use electronic health records. The NLN Board of Governors (<a
-							epub:type="biblioref" href="bibliography02.xhtml#P70004858060007AD">2008</a>) issued a
+							epub:type="biblioref" href="bibliography.xhtml#P70004858060007AD">2008</a>) issued a
 						position statement calling for both prelicensure and graduate nursing education programs to
 						provide EHR education and hands on experiences for students.</p>
 					<p>Well-done and appropriate assessments are the basis for all successful special education and
@@ -79,7 +79,7 @@
 						Individualized Education Program (IEP) assessments to be unbiased and given in the native
 						language of the student. In addition, placement in special education was to be based upon a
 						multifactored evaluation that included multiple assessments across more than one environment
-							(<a epub:type="biblioref" href="bibliography02.xhtml#P70004858060007AE">C. K. Bennett,
+							(<a epub:type="biblioref" href="bibliography.xhtml#P70004858060007AE">C. K. Bennett,
 							Journal of Staff Development, Winter 1984</a>).</p>
 				</section>
 				<section id="P700048580600073B" class="level1">
@@ -259,28 +259,6 @@
 						<p>This is the start of page 14</p>
 						<p>Index entry - third instance</p>
 					</section>
-				</section>
-				<section id="P7000485806000743_2" class="level1">
-					<header>
-						<h3>3.13 Styling of linked content</h3>
-					</header>
-					<p>The example css supports the following classes for the a element:</p>
-					<ul>
-						<li><p>xref</p></li>
-						<li><p>keyword</p></li>
-						<li><p>marginalia</p></li>
-						<li><p>biblioref</p></li>
-						<li><p>noteref_footnote</p></li>
-						<li><p>noteref_rearnote</p></li>
-						<li><p>noteref_opener</p></li>
-						<li><p>ulink</p></li>
-						<li><p>objective</p></li>
-						<li><p>pageref</p></li>
-						<li><p>index-locator, termref</p></li>
-						<li><p>url-obsolete</p></li>
-						<li><p><a href="asides.xhtml#P70004858060006F9">annoref</a></p></li>
-						<li><p>url-example</p></li>
-					</ul>
 				</section>
 			</section>
 		</section>
