--- a/samples/structure-sample-01/EPUB/xhtml/nav.xhtml
+++ b/samples/structure-sample-01/EPUB/xhtml/nav.xhtml
@@ -18,7 +18,6 @@
 						hidden="hidden"></ol></li>
 				<li><a href="preface.xhtml#P70004858060006A7">Preface Section</a><ol class="nomark">
 						<li><a href="preface.xhtml#P70004858060006A9">Preface Subsection</a></li>
-						<li><a href="bibliography01.xhtml#P70004858060006AF">Bibliography Section</a></li>
 					</ol></li>
 				<li><a href="part01.xhtml"> Part I: Part Title </a>
 					<ol class="nomark">
@@ -109,13 +108,13 @@
 				<li><a href="appendix-a.xhtml#P70004858060007A3">Appendix A Title</a><ol class="nomark">
 						<li><a href="appendix-a.xhtml#P70004858060007A5"> Appendix Section</a></li>
 					</ol></li>
-				<li><a href="bibliography02.xhtml#P70004858060007A7">Bibliography</a></li>
+				<li><a href="bibliography.xhtml#P70004858060007A7">Bibliography</a></li>
 				<li><a href="glossary.xhtml#P70004858060007B0">Glossary</a></li>
 				<li><a href="subject-index.xhtml#P70004858060007BB">Subject Index</a><ol class="nomark">
-						<li><a href="index01.xhtml#P70004858060007BC">A</a></li>
-						<li><a href="index02.xhtml#P70004858060007C5">B</a></li>
-						<li><a href="index03.xhtml#P70004858060007C8">C</a></li>
-						<li><a href="index04.xhtml#P70004858060007CB">Z</a></li>
+					<li><a href="subject-index.xhtml#P70004858060007BC">A</a></li>
+					<li><a href="subject-index.xhtml#P70004858060007C5">B</a></li>
+					<li><a href="subject-index.xhtml#P70004858060007C8">C</a></li>
+					<li><a href="subject-index.xhtml#P70004858060007CB">Z</a></li>
 					</ol></li>
 				<li><a href="name-index.xhtml#P70004858060007CF">Name Index</a></li>
 				<li><a href="endnotes.xhtml#P70004858060007D1">Book Endnote List</a></li>
@@ -141,7 +140,7 @@
 					</ol>
 				</li>
 				<li><a href="appendix-a.xhtml#P70004858060007A3">Appendix A Title</a></li>
-				<li><a href="bibliography02.xhtml#P70004858060007A7">Bibliography</a></li>
+				<li><a href="bibliography.xhtml#P70004858060007A7">Bibliography</a></li>
 				<li><a href="glossary.xhtml#P70004858060007B0">Glossary</a></li>
 				<li><a href="subject-index.xhtml#P70004858060007BB">Subject Index</a></li>
 				<li><a href="name-index.xhtml#P70004858060007CF">Name Index</a></li>
@@ -187,7 +186,6 @@
 				<li><a href="preface.xhtml#P70004858060006A8">xiii</a></li>
 				<li><a href="preface.xhtml#P70004858060006AB">xiv</a></li>
 				<li><a href="preface.xhtml#P70004858060006AC">xv</a></li>
-				<li><a href="bibliography01.xhtml#P70004858060006B4">xvi</a></li>
 				<li><a href="part01.xhtml#P70004858060006B6">1</a></li>
 				<li><a href="asides.xhtml#P70004858060006FA">5</a></li>
 				<li><a href="asides.xhtml#P7000485806000715">6</a></li>
@@ -203,7 +201,7 @@
 				<li><a href="body-content.xhtml#P700048580600075F">17</a></li>
 				<li><a href="body-content.xhtml#P7000485806000768">18</a></li>
 				<li><a href="appendix-a.xhtml#P7000485806000928">20</a></li>
-				<li><a href="bibliography02.xhtml#P7000485806000938">21</a></li>
+				<li><a href="bibliography.xhtml#P7000485806000938">21</a></li>
 				<li><a href="glossary.xhtml#P7000485806000948">22</a></li>
 				<li><a href="subject-index.xhtml#P7000485806000958">23</a></li>
 				<li><a href="name-index.xhtml#P7000485806000000000000000011968">24</a></li>
