--- a/samples/structure-sample-01/EPUB/xhtml/preface.xhtml
+++ b/samples/structure-sample-01/EPUB/xhtml/preface.xhtml
@@ -19,10 +19,10 @@
 				of students with non-English-speaking backgrounds represents the fastest growing group of this
 				population. In the last decade, the total student enrollment in public schools increased by only
 				14 percent, while the number of English learners grew 70 percent and is projected to grow even
-				more (<a epub:type="biblioref" href="bibliography01.xhtml#P70004858060006B2">National
+				more (<a epub:type="biblioref" href="bibliography.xhtml#P70004858060006B2">National
 					Clearinghouse for Bilingual Education, 1999</a>). The 2000 U.S. Census identified 20 percent of
 				school-age children as non-native English speakers (<a epub:type="biblioref"
-					href="bibliography01.xhtml#P70004858060006B1">Jamieson, Curry, &amp; Martinez, 2001</a>).</p>
+					href="bibliography.xhtml#P70004858060006B1">Jamieson, Curry, &amp; Martinez, 2001</a>).</p>
 			<p>Teachers everywhere face enormous challenges in their classrooms. They are expected to meet the
 				needs of an increasingly diverse population. There is more content to teach each year as well.
 				Teachers are now expected to integrate technology and teach to myriad standards, and they are
