styling fixes + removing more peripheral content

--- a/samples/structure-sample-01/EPUB/xhtml/body-content.xhtml
+++ b/samples/structure-sample-01/EPUB/xhtml/body-content.xhtml
@@ -53,7 +53,7 @@
 								objective listitem should be numbered. The numbers are not specially styled.</p></li>
 					</ol>
 				</section>
-				<section epub:type="case-study" id="P7000485806000766">
+				<section epub:type="case-study" id="P7000485806000766" class="level1">
 					<header>
 						<h3>4.3 Case Study Case Study Title </h3>
 					</header>
@@ -76,7 +76,7 @@
 						bodymatter. This is regular body text in chapter bodymatter.</p>
 					<p>This is regular body text in chapter bodymatter. This is regular body text in chapter
 						bodymatter. This is regular body text in chapter bodymatter.</p>
-					<section id="d6e5641">
+					<section id="d6e5641" class="level2">
 						<header>
 							<h4>4.4.1 Example 1</h4>
 						</header>
@@ -89,7 +89,7 @@
 							monetary fine is the appropriate punishment for these offenses, not imprisonment. The
 							commission wants to know, “How high should the fine be?”</p>
 					</section>
-					<section id="P7000485806000767">
+					<section id="P7000485806000767" class="level2">
 						<span title="18" epub:type="pagebreak" id="P7000485806000768"></span>
 						<header>
 							<h4>4.4.2 Feature Section</h4>
@@ -115,7 +115,7 @@
 						</section>
 					</section>
 				</section>
-				<section id="P700048580600076A">
+				<section id="P700048580600076A" class="level1">
 					<header>
 						<h3>4.5A Feature Section at different level</h3>
 					</header>
