--- a/samples/structure-sample-01/EPUB/xhtml/links.xhtml
+++ b/samples/structure-sample-01/EPUB/xhtml/links.xhtml
@@ -123,7 +123,6 @@
 							>http:/<wbr></wbr>/<wbr></wbr>fairmodel.econ.yale.edu</a>. Many teachers have found that
 						having students work with the U.S. model on the Internet is a useful complement to an
 						introductory macroeconomics course.</p>
-					<p>See also <a href="#P7000485806000745">url-obsolete</a> and span class="url-example".</p>
 				</section>
 				<section id="P7000485806000740" class="level1">
 					<header>
@@ -161,29 +160,17 @@
 							href="subject-index.xhtml#P70004858060007BB">index chapter</a> for this example.</p>
 					<section id="P7000485806000744" class="level2">
 						<header>
-							<h4>3.12a termref</h4>
+							<h4>3.12.1 termref</h4>
 						</header>
 						<p>See Also cross-reference is wrapped in span epub:type="index-xref-related" and the index
 							term being referenced should be marked using a hyperlink with class="termref" (e.g., a
 							epub:type="termref" href="#index_advertising_1530". See <a
 								href="subject-index.xhtml#P70004858060007BB">index chapter</a> for this example.</p>
 					</section>
-					<section id="P7000485806000745" class="level2">
-						<header>
-							<h4>3.13 Obsolete URL</h4>
-						</header>
-						<p>Used where the author refers to a website or page which is no longer accessible. Compare
-							to ulink and url-example.</p>
-						<p><span class="strong">Cover Art:</span> © Chin Yuen. <a>www.chinyuenart.com</a>
-							<span>The url is not tagged in the output because it links to a site that no longer
-								exists. Ideally this content would be updated to a new url or the url would be removed
-								so that the User doesn't wonder why some url's are hyperlinked and some are not. There
-								is no formatting distinction for obsolete url's. It formats as normal text.</span></p>
-					</section>
 					<section id="P7000485806000746" class="level2">
 						<span title="12" epub:type="pagebreak" id="P7000485806000747"></span>
 						<header>
-							<h4>3.14 Index Anchors</h4>
+							<h4>3.12.2 Index Anchors</h4>
 						</header>
 						<p>This section starts on page 16 and contains endpoints for the <a
 								href="subject-index.xhtml#P70004858060007BB">index chapter</a></p>
