--- a/samples/structure-sample-01/EPUB/xhtml/nav.xhtml
+++ b/samples/structure-sample-01/EPUB/xhtml/nav.xhtml
@@ -62,9 +62,8 @@
 								<li><a href="links.xhtml#P7000485806000741">3.10 Objective cross-reference</a></li>
 								<li><a href="links.xhtml#P7000485806000742">3.11 Page cross-reference</a></li>
 								<li><a href="links.xhtml#P7000485806000743">3.12 Index-locator</a><ol hidden="hidden">
-										<li><a href="links.xhtml#P7000485806000744"> 3.12a termref</a></li>
-										<li><a href="links.xhtml#P7000485806000745"> 3.13 Obsolete URL</a></li>
-										<li><a href="links.xhtml#P7000485806000746"> 3.14 Index Anchors</a></li>
+										<li><a href="links.xhtml#P7000485806000744"> 3.12.1 termref</a></li>
+										<li><a href="links.xhtml#P7000485806000746"> 3.12.2 Index Anchors</a></li>
 									</ol></li>
 							</ol></li>
 						<li><a href="body-content.xhtml#P700048580600075C"> Chapter 4: Typical Chapter Frontmatter
@@ -108,7 +107,10 @@
 				<li><a href="appendix-a.xhtml#P70004858060007A3">Appendix A Title</a><ol class="nomark">
 						<li><a href="appendix-a.xhtml#P70004858060007A5"> Appendix Section</a></li>
 					</ol></li>
-				<li><a href="bibliography.xhtml#P70004858060007A7">Bibliography</a></li>
+				<li><a href="bibliography.xhtml#P70004858060007A7">Bibliography</a><ol class="nomark">
+					<li><a href="bibliography.xhtml#P70004858060007A8">Preface</a></li>
+					<li><a href="bibliography.xhtml#P70004858060007AC">Chapter 3</a></li>
+				</ol></li>
 				<li><a href="glossary.xhtml#P70004858060007B0">Glossary</a></li>
 				<li><a href="subject-index.xhtml#P70004858060007BB">Subject Index</a><ol class="nomark">
 					<li><a href="subject-index.xhtml#P70004858060007BC">A</a></li>
