remove about authors

--- a/samples/structure-sample-01/EPUB/xhtml/nav.xhtml
+++ b/samples/structure-sample-01/EPUB/xhtml/nav.xhtml
@@ -14,8 +14,6 @@
 				<li><a href="halftitle.xhtml#d6e189">Half Titlepage Title</a></li>
 				<li><a href="titlepage.xhtml#d6e199">Titlepage Title</a></li>
 				<li><a href="copyright.xhtml#d6e264">Copyright Page</a></li>
-				<li><a href="about-authors.xhtml#P70004858060006A4">About the Authors Section</a><ol
-						hidden="hidden"></ol></li>
 				<li><a href="preface.xhtml#P70004858060006A7">Preface Section</a><ol class="nomark">
 						<li><a href="preface.xhtml#P70004858060006A9">Preface Subsection</a></li>
 					</ol></li>
@@ -82,7 +80,7 @@
 														heading</a></li>
 											</ol></li>
 									</ol></li>
-								<li><a href="body-content.xhtml#P700048580600076A"> 4.5A Feature Section at different
+								<li><a href="body-content.xhtml#P700048580600076A"> 4.5 Feature Section at different
 										level </a><ol class="nomark">
 										<li><a href="body-content.xhtml#P700048580600076C"> feature section
 											heading</a></li>
@@ -183,8 +181,6 @@
 				<li><a href="copyright.xhtml#P7000485806000695">iv</a></li>
 				<li><a href="dedication.xhtml#P7000485806000698">v</a></li>
 				<li><a href="dedication.xhtml#P7000485806000699">vi</a></li>
-				<li><a href="about-authors.xhtml#P70004858060006A5">xi</a></li>
-				<li><a href="about-authors.xhtml#P70004858060006A6">xii</a></li>
 				<li><a href="preface.xhtml#P70004858060006A8">xiii</a></li>
 				<li><a href="preface.xhtml#P70004858060006AB">xiv</a></li>
 				<li><a href="preface.xhtml#P70004858060006AC">xv</a></li>
