removing prose that details formatting expectations and additional structures that don't exhibit edupub structures/semantics

--- a/samples/structure-sample-01/EPUB/xhtml/appendix-a.xhtml
+++ b/samples/structure-sample-01/EPUB/xhtml/appendix-a.xhtml
@@ -30,20 +30,20 @@
 						Appendix Body Text. This is Appendix Body Text. </p>
 					<ul>
 						<li>
-							<p>This is Appendix unorderedlist item text (should appear as bulleted)</p>
+							<p>This is Appendix item text</p>
 						</li>
 						<li>
-							<p>This is Appendix unorderedlist item text (should appear as bulleted)</p>
+							<p>This is Appendix item text</p>
 						</li>
 					</ul>
 					<div id="d6e7085">
 						<p epub:type="title">This is a list title</p>
 						<ol>
 							<li>
-								<p>This is Appendix orderedlist item text (should appear as numbered)</p>
+								<p>This is Appendix item text</p>
 							</li>
 							<li>
-								<p>This is Appendix orderedlist item text (should appear as numbered)</p>
+								<p>This is Appendix item text</p>
 							</li>
 						</ol>
 					</div>
