--- a/samples/structure-sample-01/EPUB/xhtml/dedication.xhtml
+++ b/samples/structure-sample-01/EPUB/xhtml/dedication.xhtml
@@ -10,12 +10,12 @@
 	</head>
 	<body epub:type="frontmatter">
 		<section id="d6e435" aria-label="dedications">
-			<span title="v" epub:type="pagebreak" id="P7000485806000698"></span>
+			<span title="v" epub:type="pagebreak" id="P7000485806000698"/>
 			<section epub:type="dedication" id="d6e437" aria-label="dedication">
 				<p>This is the dedication text: To all teachers working with English learners. May they remember
 					our favorite teacher’s mantra, “If I teach them, they will learn.”</p>
 				<div class="name"><p>AH &amp; MJ</p></div>
-				<span title="vi" epub:type="pagebreak" id="P7000485806000699"></span>
+				<span title="vi" epub:type="pagebreak" id="P7000485806000699"/>
 			</section>
 		</section>
 	</body>
