--- a/samples/structure-sample-01/EPUB/xhtml/endnotes.xhtml
+++ b/samples/structure-sample-01/EPUB/xhtml/endnotes.xhtml
@@ -10,7 +10,7 @@
 	</head>
 	<body>
 		<section epub:type="rearnotes" id="P70004858060007D1" class="level1">
-			<span title="25" epub:type="pagebreak" id="P7000485806000978"></span>
+			<span title="25" epub:type="pagebreak" id="P7000485806000978"/>
 			<header>
 				<h1>Book Endnote List</h1>
 			</header>
