--- a/samples/structure-sample-01/EPUB/xhtml/glossary.xhtml
+++ b/samples/structure-sample-01/EPUB/xhtml/glossary.xhtml
@@ -18,21 +18,21 @@
 					<h2>A</h2>
 				</header>
 				<dl class="nomark">
-					<dt epub:type="glossterm" id="P70004858060007B2"><dfn>glossterm 1 text should be dark green and on line of its own</dfn> (pronunciation text)</dt>
+					<dt epub:type="glossterm" id="P70004858060007B2"><dfn>glossterm 1</dfn> (pronunciation text)</dt>
 					<dd epub:type="glossdef">
-						<p>Definition text should be normal black type.</p>
+						<p>Definition text.</p>
 					</dd>
-					<dt epub:type="glossterm" id="P70004858060007B3"><dfn>glossterm 2 text should be dark green and on line of its own</dfn> (pronunciation text)</dt>
+					<dt epub:type="glossterm" id="P70004858060007B3"><dfn>glossterm 2</dfn> (pronunciation text)</dt>
 					<dd epub:type="glossdef">
-						<p>Definition text should be normal black type.</p>
+						<p>Definition text.</p>
 					</dd>
-					<dt epub:type="glossterm" id="P70004858060007B4"><dfn>glossterm 3 text should be dark green and on line of its own</dfn> (pronunciation text)</dt>
+					<dt epub:type="glossterm" id="P70004858060007B4"><dfn>glossterm 3</dfn> (pronunciation text)</dt>
 					<dd epub:type="glossdef">
-						<p>Definition text should be normal black type.</p>
+						<p>Definition text.</p>
 					</dd>
-					<dt epub:type="glossterm" id="P70004858060007B5"><dfn>glossterm 4 text should be dark green and on line of its own</dfn> (pronunciation text)</dt>
+					<dt epub:type="glossterm" id="P70004858060007B5"><dfn>glossterm 4</dfn> (pronunciation text)</dt>
 					<dd epub:type="glossdef">
-						<p>Definition text should be normal black type.</p>
+						<p>Definition text.</p>
 					</dd>
 				</dl>
 			</section>
@@ -41,21 +41,21 @@
 					<h2>B</h2>
 				</header>
 				<dl class="glossentrylist">
-					<dt epub:type="glossterm" id="P70004858060007B7"><dfn>glossterm 5 text should be dark green and on line of its own</dfn></dt>
+					<dt epub:type="glossterm" id="P70004858060007B7"><dfn>glossterm 5</dfn></dt>
 					<dd epub:type="glossdef">
-						<p>Definition text should be normal black type.</p>
+						<p>Definition text.</p>
 					</dd>
-					<dt epub:type="glossterm" id="P70004858060007B8"><dfn>glossterm 6 text should be dark green and on line of its own</dfn></dt>
+					<dt epub:type="glossterm" id="P70004858060007B8"><dfn>glossterm 6</dfn></dt>
 					<dd epub:type="glossdef">
-						<p>Definition text should be normal black type.</p>
+						<p>Definition text.</p>
 					</dd>
-					<dt epub:type="glossterm" id="P70004858060007B9"><dfn>glossterm 7 text should be dark green and on line of its own</dfn></dt>
+					<dt epub:type="glossterm" id="P70004858060007B9"><dfn>glossterm 7</dfn></dt>
 					<dd epub:type="glossdef">
-						<p>Definition text should be normal black type.</p>
+						<p>Definition text.</p>
 					</dd>
-					<dt epub:type="glossterm" id="P70004858060007BA"><dfn>glossterm 8 text should be dark green and on line of its own</dfn></dt>
+					<dt epub:type="glossterm" id="P70004858060007BA"><dfn>glossterm 8</dfn></dt>
 					<dd epub:type="glossdef">
-						<p>Definition text should be normal black type.</p>
+						<p>Definition text.</p>
 					</dd>
 				</dl>
 			</section>
