--- a/samples/structure-sample-01/EPUB/xhtml/body-content.xhtml
+++ b/samples/structure-sample-01/EPUB/xhtml/body-content.xhtml
@@ -13,7 +13,7 @@
 			<span title="16" epub:type="pagebreak" id="P700048580600075D"></span>
 			<header>
 				<h1 epub:type="title"><span epub:type="label">Chapter</span>
-					<span epub:type="ordinal">4:</span> Typical Chapter Frontmatter and Chapter Backmatter Content </h1>
+					<span epub:type="ordinal">4:</span> Typical Chapter Content </h1>
 				<p epub:type="subtitle">Chapter 4 Subtitle</p>
 			</header>
 			<section id="d6e5498" aria-label="Chapter front">
@@ -29,10 +29,6 @@
 					<header>
 						<h3>4.1 Introduction Section Label</h3>
 					</header>
-					<p>Text in the part or chapter frontmatter that provides a narrative introduction to the part
-						or chapter bodymatter content to follow. Distinct from the toc, objectiveset, and
-						keywordset, the introduction sometimes occupies all the text in the chapter frontmatter or
-						is sometimes only one or two paragraphs of the overall frontmatter.</p>
 					<p>This is body text. This is body text. This is body text. This is body text. This is body
 						text. This is body text. </p>
 					<p>This is body text. This is body text. This is body text. This is body text. This is body
@@ -43,22 +39,20 @@
 						<h3>4.2 Learning Objectives Section Label</h3>
 					</header>
 					<ol>
-						<li epub:type="learning-objective" id="P7000485806000761"><p>This
-								objective listitem should be numbered. The numbers are not specially styled.</p></li>
-						<li epub:type="learning-objective" id="P7000485806000762"><p>This
-								objective listitem should be numbered. The numbers are not specially styled.</p></li>
-						<li epub:type="learning-objective" id="P7000485806000763"><p>This
-								objective listitem should be numbered. The numbers are not specially styled.</p></li>
-						<li epub:type="learning-objective" id="P7000485806000764"><p>This
-								objective listitem should be numbered. The numbers are not specially styled.</p></li>
+						<li epub:type="learning-objective" id="P7000485806000761"><p>This is an
+								objective listitem.</p></li>
+						<li epub:type="learning-objective" id="P7000485806000762"><p>This is an
+							objective listitem.</p></li>
+						<li epub:type="learning-objective" id="P7000485806000763"><p>This is an
+							objective listitem.</p></li>
+						<li epub:type="learning-objective" id="P7000485806000764"><p>This is an
+							objective listitem.</p></li>
 					</ol>
 				</section>
 				<section epub:type="case-study" id="P7000485806000766" class="level1">
 					<header>
 						<h3>4.3 Case Study Case Study Title </h3>
 					</header>
-					<p>A case is a section in the main narrative that does not float but is typically visually set
-						off from the running text.</p>
 					<p>This is case study text. This is case study text. This is case study text. This is case
 						study text. This is case study text. </p>
 					<p>This is case study text. This is case study text. This is case study text. This is case
@@ -72,16 +66,12 @@
 					<header>
 						<h3>4.4 Section Heading</h3>
 					</header>
-					<p>This is regular body text in chapter bodymatter. This is regular body text in chapter
-						bodymatter. This is regular body text in chapter bodymatter.</p>
-					<p>This is regular body text in chapter bodymatter. This is regular body text in chapter
-						bodymatter. This is regular body text in chapter bodymatter.</p>
+					<p>This is regular body text in a chapter. This is regular body text in a chapter. This is regular body text in a chapter.</p>
+					<p>This is regular body text in a chapter. This is regular body text in a chapter. This is regular body text in a chapter.</p>
 					<section id="d6e5641" class="level2">
 						<header>
 							<h4>4.4.1 Example 1</h4>
 						</header>
-						<p>An example is a container for presenting "examples" of things, such as programlistings,
-							worked problems, essays, or whatever thing the author is discussing.</p>
 						<p>A commission on reforming criminal law has identified certain white-collar crimes (such
 							as embezzling money from one’s employer) that are typically committed after rational
 							consideration of the potential gain and the risk of getting caught and punished. After
@@ -94,8 +84,6 @@
 						<header>
 							<h4>4.4.2 Feature Section</h4>
 						</header>
-						<p>A feature is a section in the main narrative that does not float but is typically
-							visually set off from the running text.</p>
 						<p>In the mid-1940s, Norman Borlaug started the Green Revolution on a small farm in southern
 							Mexico. His idea was simple. As the human population skyrocketed, he would grow a new
 							kind of wheat with a thicker stem and bigger seed heads, thus increasing its yield and
@@ -115,63 +103,36 @@
 						</section>
 					</section>
 				</section>
-				<section id="P700048580600076A" class="level1">
-					<header>
-						<h3>4.5A Feature Section at different level</h3>
-					</header>
-					<p>A feature is a section in the main narrative that does not float but is typically visually
-						set off from the running text. It should format the same regardless of nesting level within
-						bodymatter.</p>
-					<p>In the mid-1940s, Norman Borlaug started the Green Revolution on a small farm in southern
-						Mexico. His idea was simple. As the human population skyrocketed, he would grow a new kind
-						of wheat with a thicker stem and bigger seed heads, thus increasing its yield and allowing
-						farmers to grow more wheat—and feed more people—per acre.</p>
-					<p> The results were staggering. Within two decades, Mexico’s wheat harvest had swollen
-						six-fold, thanks to crops descended from Borlaug’s original modified wheat. Borlaug then
-						turned his talents toward rice in the Philippines, and high-yield crops spread into almost
-						every major food staple. In all, Borlaug’s revolution helped feed millions of people in poor
-						and developing countries who would otherwise have starved—an achievement that earned him the
-						1970 Nobel Peace Prize. </p>
-					<section id="P700048580600076C" class="level2">
-						<header>
-							<h4>feature section heading</h4>
-						</header>
-						<p>This is feature subsection text. This is feature subsection text. This is feature
-							subsection text</p>
-					</section>
-				</section>
 				<section id="d6e5727" class="level1">
 					<header>
-						<h3>4.6 Blockquotes</h3>
+						<h3>4.5 Blockquotes</h3>
 					</header>
-					<p>This is regular body text in chapter bodymatter. This is regular body text in chapter
-						bodymatter. This is regular body text in chapter bodymatter.</p>
+					<p>This is regular body text in a chapter. This is regular body text in a chapter. This is regular body text in a chapter.</p>
 					<div class="blockquotegroup">
 						<blockquote class="extract"><p>Though this be madness, yet there is method
 							in’t.</p></blockquote>
 						<div class="source"><p>William Shakespeare</p></div>
 					</div>
-					<p>This is regular body text in chapter bodymatter. This is regular body text in chapter
-						bodymatter. This is regular body text in chapter bodymatter.</p>
+					<p>This is regular body text in a chapter. This is regular body text in a chapter.
+						This is regular body text in a chapter.</p>
 					<blockquote>
 						<p>This is blockquote text with no source. This is blockquote text with no source. This is
 							blockquote text with no source. This is blockquote text with no source.This is blockquote
 							text with no source. This is blockquote text with no source.This is blockquote text with
 							no source. This is blockquote text with no source.</p>
 					</blockquote>
-					<p>This is regular body text in chapter bodymatter. This is regular body text in chapter
-						bodymatter. This is regular body text in chapter bodymatter.</p>
+					<p>This is regular body text in a chapter. This is regular body text in a chapter.
+						This is regular body text in a chapter.</p>
 				</section>
 				<section id="P700048580600076D" class="level1">
 					<header>
-						<h3>4.7 <img class="inline" width="28" height="13"
+						<h3>4.6 <img class="inline" width="28" height="13"
 								src="../images/study.jpg" alt="" />Misc Other Structures</h3>
 					</header>
 					<section id="P700048580600076E" class="level2">
 						<header>
 							<h4>Abstract</h4>
 						</header>
-						<p>block-level summary of contents from another source</p>
 						<div epub:type="abstract"><p>Dave Isay, the founder of StoryCorps and the editor of
 									<cite>Listening Is an Act of Love</cite>, shares the experiences that led him to
 								begin the StoryCorps project in his essay “<cite>The Story of StoryCorps</cite>.” One
@@ -222,7 +183,7 @@
 				</section>
 				<section id="P7000485806000774" class="level1">
 					<header>
-						<h3>4.8 Misc</h3>
+						<h3>4.7 Misc</h3>
 					</header>
 					<p>Numbered equation using MathML</p>
 					<div class="equation">
@@ -257,9 +218,8 @@
 			<section id="d6e6104" aria-label="Chapter back">
 				<section epub:type="conclusion" id="P7000485806000775" class="level1">
 					<header>
-						<h3>4.9 Conclusion Section</h3>
+						<h3>4.8 Conclusion Section</h3>
 					</header>
-					<p>Container for summary of key points of chapter.</p>
 					<p>Now that you have studied this chapter, you can do the following:</p>
 					<ol>
 						<li>
@@ -318,57 +278,41 @@
 				</section>
 				<section epub:type="answers" id="P7000485806000777" class="level1">
 					<header>
-						<h3>4.10 Answers</h3>
+						<h3>4.9 Answers</h3>
 					</header>
-					<p>answerlist is an orderedlist that contains answers to questions posed in assessment
-						sections.</p>
-					<p>Current model is for answers to link back to questions but upcoming spec change may reverse
-						this order such that questions link to answers.</p>
 					<ol>
 						<li epub:type="answer" id="P70004858060006EB">
-							<p>Answer text should render as lowercase alpha due to hardcoding of type="a".</p></li>
-						<li epub:type="answer" id="P70004858060006EC"><p>Answer text should render as lowercase
-								alpha due to hardcoding of type="a".</p></li>
-						<li epub:type="answer" id="P70004858060006ED"><p>Answer text should render as lowercase
-								alpha due to hardcoding of type="a".</p></li>
-						<li epub:type="answer" id="P70004858060006EE"><p>Answer text should render as lowercase
-								alpha due to hardcoding of type="a".</p></li>
+							<p>This is an answer.</p></li>
+						<li epub:type="answer" id="P70004858060006EC"><p>This is an answer.</p></li>
+						<li epub:type="answer" id="P70004858060006ED"><p>This is an answer.</p></li>
+						<li epub:type="answer" id="P70004858060006EE"><p>This is an answer.</p></li>
 					</ol>
-					<p>Note that the sublist is not setting on same line as top-level answerlist (i.e., 26.1 sets
-						on line of its own). Current CSS is not expecting a listitem to contain a number whose only
-						content is a nested list</p>
 				</section>
-				<section epub:type="practice" id="P7000485806000778" class="level1">
+				<section epub:type="practices" id="P7000485806000778" class="level1">
 					<header>
-						<h3 id="P7000485806000779">4.11 Exercises</h3>
+						<h3 id="P7000485806000779">4.10 Exercises</h3>
 					</header>
-					<p>A container for assessment content, including optional title group, introductory text,
-						instructions, and problems.</p>
 					<div class="instructions"><p>These are instructions for the assessment section. These are
 							instructions for the assessment section.</p></div>
-					<ol class="practicelist">
+					<ol>
 						<li id="P70004858060006DE">
 							<div epub:type="question" id="P70004858060006DF">
-								<p><a href="#P70004858060006EB">This is a general-problem that is auto-numbered by
-										reading system. This links to answer 1 in answerlist later in chapter. </a></p>
+								<p><a href="#P70004858060006EB">This is a general-problem that links to answer 1 in answerlist later in chapter. </a></p>
 							</div>
 						</li>
 						<li epub:type="true-false-problem" id="P70004858060006E0">
 							<div epub:type="question" id="P70004858060006E1">
-								<p><a href="#P70004858060006EC">This is a general-problem that is auto-numbered by
-										reading system. This links to answer 1 in answerlist later in chapter.</a></p>
+								<p><a href="#P70004858060006EC">This is a general-problem that links to answer 1 in answerlist later in chapter.</a></p>
 							</div>
 						</li>
 						<li epub:type="fill-in-the-blank-problem" id="P70004858060006E2"><div
 								epub:type="question" id="P70004858060006E3">
-								<p><a href="#P70004858060006ED">This is a general-problem that is auto-numbered by
-										reading system. This links to answer 1 in answerlist later in chapter.</a></p>
+								<p><a href="#P70004858060006ED">This is a general-problem that links to answer 1 in answerlist later in chapter.</a></p>
 							</div>
 						</li>
 						<li epub:type="multiple-choice-problem" id="P70004858060006E4"><div epub:type="question"
 								id="P70004858060006E5">
-								<p><a href="#P70004858060006EE">This is a general-problem that is auto-numbered by
-										reading system. This links to answer 1 in answerlist later in chapter.</a></p>
+								<p><a href="#P70004858060006EE">This is a general-problem that links to answer 1 in answerlist later in chapter.</a></p>
 								<ol class="choices">
 									<li><p>Multiple choice option</p></li>
 									<li><p>Multiple choice option</p></li>
@@ -379,10 +323,10 @@
 					</ol>
 					<section epub:type="practice" id="P7000485806001456" class="level2">
 						<header>
-							<h4>4.11.1 Practice Subsection</h4>
+							<h4>4.10.1 Practice Subsection</h4>
 						</header>
 						<ol>
-							<li><p>This is a general-problem that is auto-numbered</p></li>
+							<li><p>This is a general-problem.</p></li>
 							<li epub:type="match-problem" id="P70004858060006E6">
 								<div epub:type="question"><table>
 										<tr>
@@ -402,12 +346,9 @@
 				</section>
 				<section id="P700048580600077A" class="level1">
 					<header>
-						<h3>4.12 Keywords </h3>
+						<h3>4.11 Keywords </h3>
 					</header>
-					<p>Keywordset is a container of the list of keywords used in the chapter. Keywords in the
-						keyword list link back to keywords in the body text. Keywords in body text in turn map to
-						glossary definitions.</p>
-					<ol class="keywordlist">
+					<ol epub:type="keywords">
 
 						<li><p><a epub:type="keyword" id="P70004858060006D9" href="links.xhtml#P7000485806000735"
 									>keyword 1</a></p></li>
@@ -422,9 +363,6 @@
 						<li><p><a epub:type="keyword" id="P70004858060006DC" href="links.xhtml#P7000485806000738"
 									>keyword 4 </a></p></li>
 					</ol>
-					<p>The keywords above should render as bold and with design icon. Clicking on each keyword in
-						keylist will resolve to keyword in body text example in <a
-							href="name-index.xhtml#P70004858060007CF">Chapter 4</a>.</p>
 				</section>
 			</section>
 		</section>
