adding body semantics

--- a/samples/structure-sample-01/EPUB/xhtml/asides.xhtml
+++ b/samples/structure-sample-01/EPUB/xhtml/asides.xhtml
@@ -211,6 +211,17 @@
 						<p>This is a regular annotation</p>
 					</aside>
 				</section>
+				<section id="P7000485806000771">
+					<header>
+						<h3>1.6 Notices</h3>
+					</header>
+					<p>This is text before the notice text.</p>
+					<aside epub:type="notice">
+						<p>This is notice text. This is notice text. This is notice text. This is notice text. This
+							is notice text. </p>
+					</aside>
+					<p>This is text after the notice text.</p>
+				</section>
 			</section>
 			<section id="d6e3272" aria-label="Chapter back">
 				<section id="P7000485806000719" class="level1">
