--- a/samples/structure-sample-01/EPUB/xhtml/body-content.xhtml
+++ b/samples/structure-sample-01/EPUB/xhtml/body-content.xhtml
@@ -164,26 +164,23 @@
 								experience as told by the people who have lived and are living that experience.</p>
 						</div>
 					</section>
-					<section epub:type="notice" id="P7000485806000771">
-						<header>
-							<h4>Notice</h4>
-						</header>
-						<p>An notice is a message set off from the text. It is closely related to the text that
-							preceded it and is typically positioned immediately following the text. Items that are
-							typically labeled as "Note", "Hint", "Tip", "Warning" are examples of things we typically
-							categorize as notes.</p>
-						<p>This is notice text. This is notice text. This is notice text. This is notice text. This
-							is notice text. </p>
-						<ol>
-							<li><p>This is a listitem</p></li>
-							<li><p>This is a listitem</p></li>
-							<li><p>This is a listitem</p></li>
-						</ol>
-					</section>
+				</section>
+				<section epub:type="qna" id="P7000485806000771" class="level1">
+					<header>
+						<h3>4.7 Question and Answer</h3>
+					</header>
+					<dl>
+						<dt>This is a question?</dt>
+						<dd>This is answer text.</dd>
+						<dt>This is a question?</dt>
+						<dd>This is answer text.</dd>
+						<dt>This is a question?</dt>
+						<dd>This is answer text.</dd>
+					</dl>
 				</section>
 				<section id="P7000485806000774" class="level1">
 					<header>
-						<h3>4.7 Misc</h3>
+						<h3>4.7 Miscellaneous</h3>
 					</header>
 					<p>Numbered equation using MathML</p>
 					<div class="equation">
