--- a/samples/structure-sample-01/EPUB/xhtml/nav.xhtml
+++ b/samples/structure-sample-01/EPUB/xhtml/nav.xhtml
@@ -14,15 +14,16 @@
 				<li><a href="halftitle.xhtml#d6e189">Half Titlepage Title</a></li>
 				<li><a href="titlepage.xhtml#d6e199">Titlepage Title</a></li>
 				<li><a href="copyright.xhtml#d6e264">Copyright Page</a></li>
-				<li><a href="preface.xhtml#P70004858060006A7">Preface Section</a><ol class="nomark">
+				<li><a href="dedication.xhtml#d6e435">Dedication</a></li>
+				<li><a href="foreword.xhtml#d1e435">Foreword</a></li>
+				<li><a href="preface.xhtml#P70004858060006A7">Preface</a><ol class="nomark">
 						<li><a href="preface.xhtml#P70004858060006A9">Preface Subsection</a></li>
 					</ol></li>
 				<li><a href="part01.xhtml"> Part I: Part Title </a>
 					<ol class="nomark">
 						<li><a href="asides.xhtml#P70004858060006F9">Chapter 1: Asides</a><ol class="nomark">
 								<li><a href="asides.xhtml#P70004858060006FB">1.1 Sidebars</a><ol hidden="hidden">
-										<li><a href="asides.xhtml#P7000485806000702">Sidebar Practice Section Label
-											</a></li>
+										<li><a href="asides.xhtml#P7000485806000702">Sidebar Section</a></li>
 									</ol></li>
 								<li><a href="asides.xhtml#P700048580600070C">1.2 Footnotes</a></li>
 								<li><a href="asides.xhtml#P700048580600070D">1.3 Endnotes</a><ol hidden="hidden">
@@ -80,6 +81,7 @@
 							</ol></li>
 					</ol>
 				</li>
+				<li><a href="afterword.xhtml#d9e435">Afterword</a></li>
 				<li><a href="appendix-a.xhtml#P70004858060007A3">Appendix A Title</a><ol class="nomark">
 						<li><a href="appendix-a.xhtml#P70004858060007A5"> Appendix Section</a></li>
 					</ol></li>
