--- a/samples/structure-sample-01/EPUB/xhtml/nav.xhtml
+++ b/samples/structure-sample-01/EPUB/xhtml/nav.xhtml
@@ -109,7 +109,7 @@
 						<li><a href="credits.xhtml#P70004858060007DA">Chapter 2</a></li>
 						<li><a href="credits.xhtml#P70004858060007DC">Chapter 3</a></li>
 					</ol></li>
-
+				<li><a href="colophon.xhtml#d8e435">Colophon</a></li>
 			</ol>
 		</nav>
 		<nav id="toc-brief" epub:type="toc-brief">
